# turkeyVM

./: .gitignore  Command-line.h  LICENSE  README.md  alloc.c  cast.c  class.c  class.h  dll.c  exception.c  execute.c  interp.c  linkedlist.c  linkedlist.h  log.md  makefile  native.c  native.h  reflect.c  reflect.h  resolve.c  resolve.h  string.c  string.h  testvm.c  testvm.h  vm.c  vm.h
dllsource/: javaio.c
java/lang/: System.java  VMSystem.java
src/: CMakeLists.txt  Makefile  test  turkey  vmp
src/classloader/: class.c  class.h  resolve.c  resolve.h
src/control/: command-line.c  command-line.h  control.c  control.h  verbose.h
src/debuger/: dump.c  dump.h  log.c  log.h
src/dll/: dll.c  dll.h
src/dllsource/: javalang.c
src/heapManager/: alloc.c  alloc.h
src/interp/: execute.c  execute.h  interp.c  interp.h  opcode.c  opcode.h  stackmanager.c  stackmanager.h
src/lib/: assert.h  error.h  hash-set.c  hash-set.h  hash.c  hash.h  linkedlist.c  linkedlist.h  list.c  list.h  mem.h  poly.h  stack.c  stack.h  string.c  string.h  trace.c  trace.h  triple.c  triple.h
src/main/: turkey.c  turkey.h  vm.c  vm.h
src/native/: cast.c  cast.h  javafile.c  javafile.h  native.c  native.h  reflect.c  reflect.h
src/stackManager/: execute.c
src/util/: Command-line.c  control.c  control.h  debug.h  exception.c  exception.h  jstring.c  jstring.h  string.c  string.h  testUTF8.c  testUTF8.h  testvm.c  testvm.h
test/: BaseClass.java  BinarySearch.java  BubbleSort.java  Test.java  Testadd.java  Testsub.java  teststatic.java
