SET(CMAKE_C_COMPILER "clang")
SET(CMAKE_CXX_COMPILER "clang")
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT (TURKEY)

AUX_SOURCE_DIRECTORY (classloader/ CLASSLOADER)
AUX_SOURCE_DIRECTORY (dll/ DLL)
AUX_SOURCE_DIRECTORY (heapManager/ HEAPMANAGER)
AUX_SOURCE_DIRECTORY (interp/ INTERP)
AUX_SOURCE_DIRECTORY (lib/ LIB)
AUX_SOURCE_DIRECTORY (main/ MAIN)
AUX_SOURCE_DIRECTORY (native/ NATIVE)
AUX_SOURCE_DIRECTORY (util/ UTIL)
AUX_SOURCE_DIRECTORY (control/ CONTROL)
AUX_SOURCE_DIRECTORY (debuger/ DEBUGER)

SET(SRC_LIST
    ${CLASSLOADER}
    ${DLL}
    ${HEAPMANAGER}
    ${INTERP}
    ${LIB}
    ${MAIN}
    ${NATIVE}
    ${UTIL}
    ${CONTROL}
    ${DEBUGER})

SET(CMAKE_EXE_LINKER_FLAGS "-ldl")
SET(CMAKE_C_FLAGS "-g")
ADD_EXECUTABLE(turkey ${SRC_LIST})
